src/objects/Junction2__c.object
<CustomObject>
    <fields>
        <fullName>AccountProject__c</fullName>
        <formula>CASESAFEID(Account__c)&amp; CASESAFEID(Stakeholder__r.Project__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountProject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Stakeholders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Combination of Account and Stakeholder ID</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stakeholder__c</fullName>
        <label>Stakeholder</label>
        <referenceTo>Stakeholder__c</referenceTo>
        <relationshipName>Account_Stakeholders</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>